[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/genius.png" type="Texture" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://assets/luz_vermelha.png" type="Texture" id=4]
[ext_resource path="res://assets/luz_verde.png" type="Texture" id=5]
[ext_resource path="res://assets/luz_amarela.png" type="Texture" id=6]
[ext_resource path="res://assets/luz_azul.png" type="Texture" id=7]
[ext_resource path="res://sounds/sound1.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/sound2.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/sound3.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/sound4.ogg" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]

resource/name = "background"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundAnim/Sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2 ]
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="player" type="Sprite" parent="."]

transform/pos = Vector2( 361.089, 611.992 )
transform/scale = Vector2( 1.4, 1.4 )
z/z = 2
texture = ExtResource( 2 )

[node name="BackgroundAnim" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/background = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "background"

[node name="Sprite" type="Sprite" parent="BackgroundAnim"]

transform/pos = Vector2( 4, 3 )
transform/scale = Vector2( 0.447034, 0.500729 )
texture = ExtResource( 3 )
centered = false

[node name="controle" type="Node2D" parent="."]

[node name="btnvermelho" type="TouchScreenButton" parent="controle"]

transform/pos = Vector2( 467.476, 401.257 )
transform/scale = Vector2( 0.71388, 0.71388 )
z/z = 4
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btnverde" type="TouchScreenButton" parent="controle"]

transform/pos = Vector2( 149.453, 400.45 )
transform/scale = Vector2( 0.71388, 0.71388 )
z/z = 4
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btnamarelo" type="TouchScreenButton" parent="controle"]

transform/pos = Vector2( 148.362, 704.718 )
transform/scale = Vector2( 0.71388, 0.71388 )
z/z = 4
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btnazul" type="TouchScreenButton" parent="controle"]

transform/pos = Vector2( 461.409, 697.458 )
transform/scale = Vector2( 0.71388, 0.71388 )
z/z = 4
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="SomVerde" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SomVermelho" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SomAzul" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SomAmarelo" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="controle/btnvermelho" to="." method="_on_btnvermelho_pressed"]

[connection signal="pressed" from="controle/btnverde" to="." method="_on_btnverde_pressed"]

[connection signal="pressed" from="controle/btnamarelo" to="." method="_on_btnamarelo_pressed"]

[connection signal="pressed" from="controle/btnazul" to="." method="_on_btnazul_pressed"]


